<resources>
    <string name="app_name">斗鱼TV</string>

    <!--上拉刷新下拉加载-->
    <string name="xrefreshview_header_hint_normal">下拉刷新</string>
    <string name="xrefreshview_header_hint_ready">松开立即刷新</string>
    <string name="xrefreshview_header_hint_refreshing">正在刷新数据中...</string>
    <string name="xrefreshview_header_hint_loading">正在刷新数据中...</string>
    <string name="xrefreshview_header_hint_loaded">刷新成功</string>
    <string name="xrefreshview_header_hint_loaded_fail">刷新失败</string>
    <string name="xrefreshview_header_last_time">上次更新时间：</string>
    <string name="xrefreshview_footer_hint_normal">加载完成</string>
    <string name="xrefreshview_footer_hint_fail">加载失败，请重试</string>
    <string name="xrefreshview_footer_hint_complete">已无更多数据</string>
    <string name="xrefreshview_footer_hint_click">点击加载更多</string>
    <string name="xrefreshview_footer_hint_release">松开加载更多</string>
    <string name="xrefreshview_footer_hint_ready">松开载入更多</string>
    <string name="xrefreshview_never_refresh">从未刷新</string>
    <string name="xrefreshview_refresh_justnow">刚刚刷新</string>
    <string name="xrefreshview_refresh_minutes_ago">%1s分钟之前刷新</string>
    <string name="xrefreshview_refresh_hours_ago">%1s小时之前刷新</string>
    <string name="xrefreshview_refresh_days_ago">%1s天之前刷新</string>

    <string name="picker_cancel">取消</string>
    <string name="picker_save">保存</string>
    <string name="action_settings">设置</string>
    <string name="usercenter_login">登录</string>
    <string name="usercenter_register">注册</string>
    <string name="watch_history">观看历史</string>
    <string name="letter">站内信</string>
    <string name="mine_renwu">我的任务</string>
    <string name="chongzhi">鱼翅充值</string>
    <string name="anchor_recruit">主播招募</string>
    <string name="my_video">我的视频</string>
    <string name="video_collection">视频收藏</string>
    <string name="my_account">我的账户</string>
    <string name="game_center">游戏中心</string>
    <string name="clock">开播提醒</string>
    <string name="choose_login_way">选择登录方式</string>
    <string name="wx_login">微信登录</string>
    <string name="dy_login">斗鱼账号登录</string>
    <string name="wb_login">微博登录</string>
    <string name="qq_login">QQ登录</string>
</resources>
