<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#85000000"
   android:id="@+id/ll_login"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/wh280.0dimens280.0dp"
        android:layout_centerInParent="true"
        android:layout_height="@dimen/wh370.0dimens370.0dp"
        android:background="@drawable/popup_login"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:layout_marginTop="@dimen/wh30.0dimens30.0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
       <TextView
           android:id="@+id/tv_login_way"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/choose_login_way"
           android:textSize="12sp"
           android:textColor="#787878"
           android:gravity="center"
           android:layout_centerInParent="true"
           />
        <View
            android:layout_width="@dimen/wh40.0dimens40.0dp"
            android:layout_height="1px"
            android:background="#787878"
            android:layout_toLeftOf="@id/tv_login_way"
            android:layout_marginTop="@dimen/wh7.0dimens7.0dp"
           android:layout_marginRight="@dimen/wh9.0dimens9.0dp"
            />
        <View
            android:layout_width="@dimen/wh40.0dimens40.0dp"
            android:layout_height="1px"
            android:background="#787878"
            android:layout_toRightOf="@id/tv_login_way"
            android:layout_marginTop="@dimen/wh7.0dimens7.0dp"
            android:layout_marginLeft="@dimen/wh9.0dimens9.0dp"
            />
        </RelativeLayout>
        <ImageView
            android:clickable="true"
            android:id="@+id/btn_close_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/wh12.0dimens12.0dp"
            android:layout_marginRight="@dimen/wh10.0dimens10.0dp"
            android:src="@drawable/icon_close_login"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="@dimen/wh230.0dimens230.0dp"
        android:layout_marginRight="@dimen/wh25.0dimens25.0dp"
        android:layout_marginLeft="@dimen/wh25.0dimens25.0dp"
        android:layout_marginTop="@dimen/wh15.0dimens15.0dp"
        android:layout_height="@dimen/wh40.0dimens40.0dp"
        android:background="@drawable/login_by_weixi_bg"

        android:textSize="14dp"
        android:paddingLeft="@dimen/wh40.0dimens40.0dp"
        android:gravity="center"
        android:drawableLeft="@drawable/login_by_weixin"
        android:drawablePadding="-30dp"
        android:text="@string/wx_login"
        android:id="@+id/tv_login_wx"
        android:clickable="true"/>

    <TextView
        android:layout_width="@dimen/wh230.0dimens230.0dp"
        android:layout_marginRight="@dimen/wh25.0dimens25.0dp"
        android:layout_marginLeft="@dimen/wh25.0dimens25.0dp"
        android:layout_marginTop="@dimen/wh13.0dimens13.0dp"
        android:layout_height="@dimen/wh40.0dimens40.0dp"
        android:background="@drawable/login_by_qq_bg"
        android:textColor="@color/login_by_qq"
        android:textSize="14dp"
        android:paddingLeft="@dimen/wh40.0dimens40.0dp"
        android:gravity="center"
        android:drawableLeft="@drawable/login_by_qq"
        android:drawablePadding="-30dp"
        android:text="@string/qq_login"
        android:id="@+id/tv_login_qq"
        android:clickable="true"
        />
    <TextView
        android:layout_width="@dimen/wh230.0dimens230.0dp"
        android:layout_marginRight="@dimen/wh25.0dimens25.0dp"
        android:layout_marginLeft="@dimen/wh25.0dimens25.0dp"
        android:layout_marginTop="@dimen/wh13.0dimens13.0dp"
        android:layout_height="@dimen/wh40.0dimens40.0dp"
        android:background="@drawable/login_by_weibo_bg"
        android:textColor="@color/login_by_wb"
        android:textSize="14dp"
        android:paddingLeft="@dimen/wh40.0dimens40.0dp"
        android:gravity="center"
        android:drawableLeft="@drawable/login_by_weibo"
        android:drawablePadding="-30dp"
        android:text="@string/wb_login"
        android:id="@+id/tv_login_wb"
        android:clickable="true"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or"
        android:textSize="14sp"
        android:textColor="#787878"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/wh12.0dimens12.0dp"/>

    <TextView
        android:id="@+id/tv_login_douyu"
        android:layout_width="@dimen/wh230.0dimens230.0dp"
        android:layout_marginRight="@dimen/wh25.0dimens25.0dp"
        android:layout_marginLeft="@dimen/wh25.0dimens25.0dp"
        android:layout_height="@dimen/wh40.0dimens40.0dp"
        android:background="@drawable/login_by_douyu"
        android:textColor="@color/background"
        android:textSize="14dp"
        android:gravity="center"
        android:text="@string/dy_login"
        android:clickable="true"
        />
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/wh12.0dimens12.0dp"
        android:textColor="#ff7800"
        android:textSize="14sp"
        android:text="快速注册"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        />
    </LinearLayout>
</RelativeLayout>